# c_string_view

./: .gitignore  CMakeLists.txt  LICENSE  README.md
compile/: c_string_view.cpp
declare/: c_string_view.h
define/: c_string_view.hpp
define/c_string_view/: c_str.hpp  c_string_view.hpp  c_string_view_data.hpp
test/: test_c_string_view.cpp
